# stm32f103_base

./: .gitignore  CMakeLists.txt  README.md
src/: main.cc
src/hal/: stm32f10x.h
stm32f0/STM32F031_blink/: platformio.ini
stm32f0/STM32F031_blink/lib/IMU/: MPU9250.cpp  MPU9250.h
stm32f0/STM32F031_blink/lib/UART/: UART.cpp  UART.h
stm32f0/STM32F031_blink/lib/XN297/: SPI.h  XN297.h
stm32f0/STM32F031_blink/lib/system/: system.cpp  system.h
stm32f0/STM32F031_blink/src/: main.cpp
stm32f0/stm0_test/: CMakeLists.txt
stm32f0/stm0_test/scripts/: fw_size.py  rs_loopback.sh
stm32f0/stm0_test/src/: SPI.cc  SPI.cpp  SPI.h  STM32F050K4_FLASH.ld  XN297.cc  XN297.cpp  XN297.h  main.c  stm32f0xx_it.c
